# Flick

./: .gitignore  pyproject.toml  setup.cfg
flicklib/: README.md  __init__.py  i2c.py
flicklib/examples/: armcontrol.py  demo.py  f2048.py  screenly-ose.py  sense.py  snail.py  volctrl.py
