[metadata]
long_description = file: flicklib/README.md, flicklib/CHANGELOG.txt
version = attr: flicklib.__version__

[options]
packages =
    flicklib
    flicklib.examples
package_dir =
    flicklib = flicklib
    flicklib.examples = flicklib/examples

[options.package_data]
flicklib =
    CHANGELOG.txt
    LICENSE.txt
    README.md
    py.typed
